Homepage URL changed in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/siva251/sivakumar-portfolio.git",
+  "homepage": "https://siva251.github.io/sivakumar-portfolio",
   "name": "route",
   "version": "0.1.0",
   "private": true,
