--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://siva251.github.io/sivakumar-portfolio",
+  "homepage": "https://siva251.github.io/sivakumar-portfolio/",
   "name": "route",
   "version": "0.1.0",
   "private": true,
